Transformation for web-cli
